--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ dependencies = [
     # Data APIs
     "yfinance>=0.2.32",
     "alpha-vantage>=2.3.1",
+    "kagglehub[pandas-datasets]>=0.4.3",
     "requests>=2.31.0",
     "aiohttp>=3.8.0",
     
