--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ polars>=0.19.0
 # Data APIs
 yfinance>=0.2.32
 alpha-vantage>=2.3.1
+kagglehub[pandas-datasets]>=0.4.3
 requests>=2.31.0
 aiohttp>=3.8.0
 
